<resources>
    <string name="app_name">Artia</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_here">New Here?</string>
    <string name="old_memnber">Already Member?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="camera">Camera</string>
    <string name="result">Result</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title">Card</string>
    <string name="secondary_text">Text</string>
    <string name="supporting_text">More text</string>


    <string name="large_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="action_settings">Settings</string>
    <string name="mat_name">Mat Name</string>
    <string name="origin">Origin</string>
    <string name="pattern_name">Pattern Name</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_account">Account</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="log_in_cancelled">Log in cancelled</string>
    <string name="logged_in">Logged in</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An error has occurred</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="account_deleted">Account deleted</string>
    <string name="press_back_again">Press Back again to Exit.</string>
    <string name="not_logged_in_message">You are not Logged in</string>
    <string name="account_settings_message">Update your account</string>
    <string name="email_label">Your email</string>
    <string name="name_label">Your full name</string>
    <string name="update_password_text">Update your password</string>
    <string name="leave_empty_message">Leave empty if not editing</string>
    <string name="old_pass_label">Old password</string>
    <string name="new_pass_label">New password</string>
    <string name="update_account">Update account</string>
    <string name="name_updated">Full name updated</string>
    <string name="two_pass_fields_required">The two password fields are required</string>
    <string name="pass_must_be_6_or_more">Your password must be at least 6 caracters</string>
    <string name="old_pass_incorrect">Old password incorrect</string>
    <string name="account_updated">Account informations updated</string>
    <string name="no_change_detected">No change detected</string>
    <string name="delete">Delete</string>
    <string name="show_more">Show more</string>
    <string name="date">Date</string>
    <string name="verify_delete">Are you sure you want to delete it from your history ?</string>
    <string name="from_your_history">\"</string>
    <string name="delete_the_item">Deleting the item \"</string>
    <string name="accept">accept</string>
    <string name="back">Back</string>
    <string name="Result">Result</string>
    <string name="should_grant_app_permissions">You should grant all app permissions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signification_motif">Pattern meaning</string>
    <string name="libelle_motif">Pattern name</string>
    <string name="new_motif">New pattern</string>
    <string name="telecharger">Upload</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="no_match_found">No match found.</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="go_admin_panel">Go to admin panel</string>
    <string name="Description">Description :</string>
    <string name="List_patterns">List patterns</string>
    <string name="empty_list_motif">You didn\'t add any pattern yet.</string>

    <string name="edit">Edit</string>
    <string name="a_motif_found">A motif has been found</string>
    <string name="description">Description</string>
    <string name="problem_with_image">There was an issue, while loading your image\n please select another one</string>
    <string name="no_entry_yet">No entry found.\nMake some researches to fill this section</string>
    <string name="the_item">the item </string>
    <string name="success_deleted"> was successfully deleted </string>
    <string name="add_new_pattern">Add new pattern</string>
    <string name="go_back">Go back</string>


</resources>